# aeromux-db

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  README.md  generate.sh  pyproject.toml
.github/workflows/: build-database.yml
artifacts/: reg_mismatches.csv
schema/: schema.md  schema.sql
src/aeromux_db/: __init__.py  __main__.py  builder.py  cli.py  downloader.py  models.py  version.py
src/aeromux_db/sources/: adsbexchange.py  mictronics.py  opensky.py  typelongnames.py
tests/: test_downloader.py
